--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -829,3 +829,14 @@
   year={2012},
   publisher={Elsevier}
 }
+
+@article{balboni2022people,
+  title={Why do people stay poor?},
+  author={Balboni, Clare and Bandiera, Oriana and Burgess, Robin and Ghatak, Maitreesh and Heil, Anton},
+  journal={The Quarterly Journal of Economics},
+  volume={137},
+  number={2},
+  pages={785--844},
+  year={2022},
+  publisher={Oxford University Press}
+}
