--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -840,3 +840,12 @@
   year={2022},
   publisher={Oxford University Press}
 }
+
+@article{botega2020perfil,
+  title={Perfil dos hospitais gerais do Sistema {\'U}nico de Sa{\'u}de},
+  author={Botega, Laura de Almeida and Andrade, M{\^o}nica Viegas and Guedes, Gilvan Ramalho},
+  journal={Revista de Sa{\'u}de P{\'u}blica},
+  volume={54},
+  year={2020},
+  publisher={SciELO Brasil}
+}
