--- a/eae0310-5-bens-publicos.Rmd
+++ b/eae0310-5-bens-publicos.Rmd
@@ -35,7 +35,7 @@ class: middle
 
 Nesse caso, há incentivo para *free riders*: indivíduos não contribuírem com o financiamento (ou esgotarem o recurso) do bem comum que utilizam
 
-Quando bens públicos também são *não-rivais*, ou seja, o consumo por um indivíduo não diminui a quantidade disponível para os outros, então chamamos o bem de **bem público puro**
+Quando bens comuns também são *não-rivais*, ou seja, o consumo por um indivíduo não diminui a quantidade disponível para os outros, então chamamos o bem de **bem público puro**
 
 ---
 class: middle
@@ -166,17 +166,17 @@ A grande vantagem do setor privado para o público em atividades econômicas é 
 
 ---
 class: middle
-## Dilema dos comuns
+## Tragédia dos comuns
 
-*Bens comuns* são bens não-excludentes que são *rivais* &mdash; pode levar ao **dilema dos comuns**: cada indivíduo tem o incentivo de consumir mais do bem do que seria socialmente ótimo, levando ao seu esgotamento
+*Bens comuns* são bens não-excludentes que são *rivais* &mdash; pode levar à **tragédia dos comuns**: cada indivíduo tem o incentivo de consumir mais do bem do que seria socialmente ótimo, levando ao seu esgotamento
 
 > Therein is the tragedy. Each man is locked into a system that compels him to increase his herd without limit - in a world that is limited. Ruin is the destination toward which all men rush, each pursuing his own best interest in a society that believes in the freedom of the commons. Hardin (1968) apud `r Citep(myBib, "ostrom1990governing")`
 
-A forma mais simples de se pensar no dilema dos comuns é como um *dilema dos prisioneiros*
+A forma mais simples de se pensar na tragédia dos comuns é como um *dilema dos prisioneiros*
 
 ---
 class: middle
-## Dilema dos comuns
+## Dilema dos prisioneiros
 
 > The idea that groups tend to act in support of their group interests is supposed to follow logically from this widely accepted premise of rational, self-interested behavior. In other words, if the members of some group have a common interest or object, and if they would all be better off if that objective were achieved, it has been thought to follow logically that the individuals in that group would, if they were rational and self-interested, act to achieve that objective. Olson (1965) apud `r Citep(myBib, "ostrom1990governing")`
 
@@ -184,11 +184,11 @@ O **dilema dos prisioneiros** foi importante para se contrapor à visão acima, 
 
 ---
 class: middle
-## Dilema dos comuns
+## Governando os comuns
 
-Na 2a metade do séc. XX acreditava-se que havia apenas duas soluções *possíveis* para o dilema dos comuns: ou o *Leviatã* ou demarcação dos comuns em *propriedade privada* &mdash; sem espaço para comunidades auto-geridas
+Na 2a metade do séc. XX acreditava-se que havia apenas duas soluções *possíveis* para a tragédia dos comuns: ou o *Leviatã* ou demarcação dos comuns em *propriedade privada* &mdash; sem espaço para comunidades auto-geridas
 
-`r Citep(myBib, "ostrom1990governing")` notou que no mundo real, comuns existem e funcionam de forma eficiente &mdash; a aplicabilidade do *dilema dos comuns* depende das circunstâncias *práticas* do ambiente analisado (*políticas públicas baseadas em metáforas*)
+`r Citep(myBib, "ostrom1990governing")` notou que no mundo real, comuns existem e funcionam de forma eficiente &mdash; a aplicabilidade da tragédia dos comuns depende das circunstâncias *práticas* do ambiente analisado (*políticas públicas baseadas em metáforas*)
 
 Ela ressalta a diferença entre *propriedade comum* e **propriedade de acesso-livre**: a primeira tem *direitos de propriedade para a comunidade* que faz com que tenham incentivo em criar *instituições* e *normas sociais* para geri-la
 
@@ -196,11 +196,21 @@ Ela ressalta a diferença entre *propriedade comum* e **propriedade de acesso-li
 class: middle
 ## Bens públicos locais
 
-Bens públicos podem ser ofertados ao nível federal, estadual ou municipal. O que determina quais gastos devem ser realizados em qual esfera?
+O que determina quais gastos devem ser realizados ao nível federal, estadual ou municipal? (**federalismo fiscal ótimo**)
 
-Tiebout (1956) propôs que uma vantagem da provisão local é que gera *competição* entre as localidades &mdash; cidadãos podem *votar com os pés*
+Tiebout (1956) propôs que uma vantagem da provisão local é que gera *competição* entre as localidades: cidadãos podem *votar com os pés*, se mudando para onde a oferta de bens públicos satisfaz as suas preferências
 
-Comunidades locais deveriam prover bens públicos que sejam para todos (*tax-benefit linkages*), com poucas externalidades espaciais e poucas economias de escala  (**federalismo fiscal ótimo**) 
+Intuitivamente, o setor público imitaria o setor privado, dando a oportunidade de moradores ("consumidores") escolherem onde "comprar" o bem público &mdash; isso revela a suas preferências reais (sem *free riding*) sobre bens públicos, levando a um resultado eficiente
+
+---
+class: middle
+## Bens públicos locais
+
+No mundo real a mobilidade espacial é limitada, mas o modelo de Tiebout dá a intuição da grande diferença entre gastos federais e locais: as pessoas podem mais facilmente trocar de municípios que de países
+
+Deve-se descentralizar o provimento apenas de bens públicos que sejam úteis para a maior parte dos moradores do local (*tax-benefit linkages*), ao contrário de benefícios a grupos específicos, como assistência social 
+
+Deve-se centralizar gastos que gerem significativas externalidades espaciais, já que nesse caso vão ser subprovidas ao nível local, e que tenham economias relevantes de escala
 
 ---
 class: inverse, middle, center
