--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -849,3 +849,14 @@
   year={2020},
   publisher={SciELO Brasil}
 }
+
+@article{senkevics2019perfil,
+  title={O perfil discente das universidades federais mudou p{\'o}s-Lei de Cotas?},
+  author={Senkevics, Adriano Souza and Mello, Ursula Mattioli},
+  journal={Cadernos de Pesquisa},
+  volume={49},
+  number={172},
+  pages={184--208},
+  year={2019},
+  publisher={SciELO Brasil}
+}
