--- a/eae0310-6-seguridade-social.Rmd
+++ b/eae0310-6-seguridade-social.Rmd
@@ -33,9 +33,9 @@ class: middle
 
 Discutimos já duas falhas de mercado que requerem (plausivelmente) intervenção estatal: bens não-excludentes e externalidades. Uma terceira é **restrições ao crédito**
 
-Notem que por mais que essa 3a receba menos atenção em micro, ela representa a maior parte dos gastos do Estado! No Brasil, o governo federal gasta ~12% do PIB (1/3 do orçamento) em seguro social
+Notem que por mais que essa 3a receba menos atenção em micro, ela representa a maior parte dos gastos do Estado! 
 
-Outros ~4% do PIB são gastos públicos em saúde, outra forma de seguro público
+No Brasil, o governo federal gasta ~12% do PIB (1/3 do orçamento) em seguro social &mdash; outros ~4% do PIB são gastos públicos em saúde, outra forma de seguro público
 
 ---
 class: middle
@@ -56,9 +56,7 @@ Além destes, o SUS é uma forma de provisão pública de *seguro de saúde*
 class: middle
 ## Risco e seguro
 
-Programas de seguro social geralmente também têm *efeito redistributivo*, mas esse não é o seu objetivo central
-
-O objetivo é assegurar cidadãos **avessos ao risco** a choques de renda e permitir que *suavizem seu consumo* (seguro)
+Programas de seguro social geralmente também têm *efeito redistributivo*, mas esse não é o seu objetivo central &mdash; ele é segurar cidadãos *avessos ao risco* contra choques de renda e permitir que **suavizem seu consumo**
 
 Como *utilidade marginal da renda* é decrescente, maximizar a utilidade intertemporal equivale a igualar a utilidade marginal em diferentes períodos (ou **estados da natureza**)
 
@@ -68,9 +66,7 @@ Por exemplo, ou gostaria sempre de transferir renda de *mundos possíveis* em qu
 class: middle
 ## Risco e seguro
 
-Formalmente, os consumidores vão maximizar a sua **utilidade esperada**, com a esperança tomada em relação aos possíveis estados da natureza
-
-Um **prêmio de seguro atuariamente justo** é aquele que custa exatamente o custo esperado do dano
+Um **prêmio de seguro atuariamente justo** é aquele cujo preço é exatamente igual ao custo esperado do dano
 
 Na prática, a seguradora pode cobrar um **prêmio de risco**, que é a diferença entre a utilidade esperada e o *equivalente de certeza*
 
@@ -114,7 +110,7 @@ class: middle
 knitr::include_graphics("figs/eae0310-6-1.png")
 ```
 
-Quando o prêmio de seguro é atuariamente justo, o comportamento ótimo de um agente avesso ao risco é sempre o seguro total `r Citep(myBib, "gruber")`
+Imagine que Sam tem uma chance de 99% de não bater o carro, ganhando `$`30 mil, e 1% de bater, ganhando zero. Se a função de utilidade é côncava, quando o prêmio de seguro é atuariamente justo, o comportamento ótimo de um agente avesso ao risco é sempre o seguro total `r Citep(myBib, "gruber")`
 
 ---
 class: middle
@@ -122,9 +118,7 @@ class: middle
 
 Mas a pergunta mais relevante aqui para nós não é por que as pessoas compram seguros, mas sim por que o Estado precisaria prover eles
 
-E a resposta a isso não está na aversão ao risco, mas sim na **assimetria informacional**
-
-Consumidores em um mercado de seguro quase sempre têm maior informação sobre os seus riscos que a seguradora
+E a resposta a isso não está na aversão ao risco, mas sim na **assimetria informacional**: consumidores em um mercado de seguro quase sempre têm maior informação sobre os seus riscos que a seguradora
 
 Se há grupos de maior e menor risco, o prêmio atuariamente justo pode ser maior que a disposição a pagar do grupo de menor risco, expulsando eles do mercado
 
@@ -135,7 +129,7 @@ class: middle
 knitr::include_graphics("figs/eae0310-6-3.png")
 ```
 
-Se a seguradora consegue separar os tipos, o resultado é eficiente. Mas se há informação assimétrica, ocorre seleção adversa `r Citep(myBib, "gruber")`
+Imagine dois *tipos* de agentes: cuidadosos (0.5% de chance de bater o carro) e descuidados (5%), com 100 indivíduos cada. Se a seguradora consegue separar os tipos, o resultado é eficiente. Mas se há informação assimétrica, ocorre **seleção adversa**, tanto quando a firma tenta uma *política separadora* (todos compram menos) quanto *pooling* (o tipo bom é excluído do mercado) `r Citep(myBib, "gruber")`
 
 ---
 class: middle
@@ -145,9 +139,7 @@ No limite, a **seleção adversa** de grupos de maior e maior risco pode *degrin
 
 Como vimos, se consumidores são avessos ao risco, estão dispostos a pagar um prêmio de risco além do prêmio atuariamente justo. Se for suficientemente alto para os agentes de menor risco, pode haver um **equilíbrio pooling**
 
-Seguradoras também podem tentar (e tentam) fazer **screening** do risco dos consumidores
-
-Elas podem oferecer um menu de prêmio-cobertura com opção que seja barata mas cubra poucos danos, e assim valha a pena apenas para agentes de menor risco (**equilíbrio separador**)
+Seguradoras também podem tentar (e tentam) fazer **screening** do risco dos consumidores: oferecer um menu de prêmio-cobertura com opção que seja barata mas cubra poucos danos, e assim valha a pena apenas para agentes de menor risco (**equilíbrio separador**)
 
 ---
 class: middle
@@ -157,9 +149,7 @@ Mas note que o equilíbrio separador *ainda é ineficiente!* Os consumidores de 
 
 A **seleção adversa** ocorre pois indivíduos de menor risco decidem sair do mercado. Uma forma então "simples" de resolver o problema é obrigá-los a comprar o seguro
 
-Note que no último caso, se todos comprassem, a firma teria lucro zero e o mercado seria eficiente (nesse caso os consumidores de menor risco estarão subsidiando o seguro dos de maior risco)
-
-Essa é a essência da intervenção governamental em seguridade social
+Note que no último caso, se todos comprassem, a firma teria lucro zero e o mercado seria eficiente (nesse caso os consumidores de menor risco estariam subsidiando o seguro dos de maior risco)
 
 ---
 class: middle
@@ -177,18 +167,18 @@ class: middle
 
 A ineficiência do mercado com seleção vem do fato da curva de MC estar **abaixo** da curva de AC: o consumidor marginal sempre tem um custo menor que os inframarginais
 
-Assim, produzir ao nível eficiente geraria prejuízo às operadoras &mdash; os indivíduos **de menor risco** são expulsos do mercado, ainda que valorem o seguro mais que seu custo individual
+Mas eles também têm uma disposição à pagar menor: produzir ao nível eficiente geraria prejuízo às operadoras &mdash; os indivíduos **de menor risco** são expulsos do mercado, ainda que valorem o seguro mais que seu custo individual
 
 Mesmo nesse modelo, a quantidade de falta de seguro e o peso morto podem variar muito
 
 ---
 class: middle
 
-```{r, echo=FALSE, out.width = '75%'}
+```{r, echo=FALSE, out.width = '70%'}
 knitr::include_graphics("figs/eae0310-6-12.png")
 ```
 
-Modelo "de livro-texto" de oferta e demanda (competitiva) com seleção adversa `r Citep(myBib, "einav")`
+Modelo de oferta e demanda competitiva *com seleção adversa*: a demanda negativamente inclinada exclui do mercado consumidores de baixa disposição a pagar, o que (com seleção adversa) é ineficiente, pois a curva de custo marginal está abaixo da curva de demanda `r Citep(myBib, "einav")`
 
 ---
 class: middle
@@ -198,15 +188,13 @@ knitr::include_graphics("figs/eae0310-6-13.png")
 knitr::include_graphics("figs/eae0310-6-13b.png")
 ```
 
-Casos extremos da seleção adversa: em (a) o resultado é eficiente; em (b) o mercado degringola `r Citep(myBib, "einav")`
+Casos extremos da seleção adversa: em (a) o resultado é eficiente, pois as empresas têm lucro operando em todo o mercado; em (b) o **mercado se degringola** &mdash; a cada preço potencial, o custo médio dos consumidores *dispostos a se segurar àquele preço* é maior que o dado preço `r Citep(myBib, "einav")`
 
 ---
 class: middle
 ## Seleção em mercados de seguros
 
-A solução canônica para a ineficiência gerada pela seleção adversa é obrigar a todos a comprar o seguro
-
-Mas isso só vale no "modelo de livro-texto"! Se adicionarmos custos de administração do seguro, então não necessariamente a solução ótima envolve seguro completo
+A solução canônica para a ineficiência gerada pela seleção adversa é obrigar a todos a comprar o seguro (mas note que se adicionarmos custos de administração, então não necessariamente a solução ótima envolve seguro completo)
 
 Além disso, se assumirmos *heterogeneidade de preferências*, então agentes mais avessos ao risco podem ser (i) mais cuidadosos; e (ii) dispostos a pagar mais (**seleção vantajosa**)
 
@@ -214,23 +202,11 @@ Com custos de administração e seleção vantajosa, temos o *oposto* do caso us
 
 ---
 class: middle
-
-```{r, echo=FALSE, fig.show="hold", out.width="50%"}
-knitr::include_graphics("figs/eae0310-6-14.png")
-knitr::include_graphics("figs/eae0310-6-14b.png")
-```
-
-Extensões ao "modelo de livro-texto": (a) com custo de administração provisão a todos já pode não ser eficiente; e (b) **seleção vantajosa** `r Citep(myBib, "einav")`
-
----
-class: middle
 ## Seguro público
 
 Vimos que a razão principal para o **seguro público** é resolver o problema de seleção adversa
 
-Além disso, se eu não tenho seguro de carro e bato em alguém, posso não ter dinheiro para cobrir seus danos, gerando uma *externalidade financeira* (por isso existe o DPVAT)
-
-Do lado oposto, o governo pode querer agir por *internalidades*
+Outra razão é que se eu não tenho seguro de carro e bato em alguém, posso não ter dinheiro para cobrir seus danos, gerando uma *externalidade financeira* (por isso existe o DPVAT)
 
 **Dilema do samaritano**: governos podem não conseguir *se comprometer crivelmente* a não intervir no estado ruim da natureza caso o agente não compre seguro
 
@@ -240,9 +216,7 @@ class: middle
 
 Frequentemente consumidores de maior risco também são os mais necessitados (ou são de maior risco *por serem* necessitados), e a solução eficiente de mercado envolveria eles pagar muito mais
 
-Um risco é que o seguro público faça **crowding out** no seguro próprio
-
-Existem várias formas pelas quais famílias podem *suavizar o consumo* sem seguro formal: podem usar sua poupança, aumentar o trabalho do esposo, pegar emprestado de bancos ou familiares
+Existem várias formas pelas quais famílias podem *suavizar o consumo* sem seguro formal: podem usar sua poupança, aumentar o trabalho do esposo, pegar emprestado de bancos ou familiares &mdash; um risco é que o seguro público faça **crowding out** no seguro próprio
 
 Na prática, famílias frequentemente agem de *forma miópica*, dando valor demais ao presente e poupando menos que o racional &mdash; governo pode agir para corrigir *internalidades*
 
@@ -254,7 +228,7 @@ knitr::include_graphics("figs/eae0310-6-4.png")
 knitr::include_graphics("figs/eae0310-6-4b.png")
 ```
 
-Diferença na duração do desemprego por valor de seguro-desemprego &mdash; pobres (a) vs ricos (b) `r Citep(myBib, "chetty2008moral")`
+Diferença na duração do desemprego por valor de seguro-desemprego &mdash; quartil mais pobre (a) vs quartil mais rico (d): um menor seguro-desemprego faz os mais pobres acharem emprego mais rapidamente, mas não tem o mesmo efeito sobre os mais ricos, que plausivelmente conseguem já suavizar o consumo com poupança prévia `r Citep(myBib, "chetty2008moral")`
 
 ---
 class: middle
@@ -263,7 +237,7 @@ class: middle
 knitr::include_graphics("figs/eae0310-6-5.png")
 ```
 
-Trabalhadores demitidos recebem o FGTS e *aumentam* seu consumo, mesmo perdendo *renda permanente* (efeito **cash in hand**) `r Citep(myBib, "gerard2021job")`
+Evidência de comportamento miópico e falta de suavização de consumo: no Brasil, trabalhadores demitidos (*laid-off*, ao contrário de *fired* por justa-causa, no painel b) recebem o FGTS e *aumentam* seu consumo, mesmo perdendo *renda permanente* (efeito **cash in hand**) `r Citep(myBib, "gerard2021job")`
 
 ---
 class: middle
@@ -272,8 +246,6 @@ class: middle
 O outro conceito essencial de informação assimétrica é o efeito comportamental que o seguro tem na tomada de risco dos consumidores (**risco moral**)
 
 `r Citep(myBib, "carvalho2018unintended")` estimam que 11-13% das demissões são influenciadas pela existência de seguro-desemprego
-
-Seguro de carro pode fazer as pessoas dirigirem de forma mais perigosa; pessoas com seguro contra roubo podem deixar a casa destrancada
 
 Sem risco moral o seguro ótimo seria total. Na realidade, o **nível ótimo de seguro** iguala o *benefício* de suavização do consumo com o *malefício* de gerar risco moral
 
@@ -489,3 +461,14 @@ class:middle
 PrintBibliography(myBib, start=6)
 ```
 </small>
+
+
+<!-- --- -->
+<!-- class: middle -->
+
+<!-- ```{r, echo=FALSE, fig.show="hold", out.width="50%"} -->
+<!-- knitr::include_graphics("figs/eae0310-6-14.png") -->
+<!-- knitr::include_graphics("figs/eae0310-6-14b.png") -->
+<!-- ``` -->
+
+<!-- Extensões ao "modelo de livro-texto": (a) com custo de administração provisão a todos já pode não ser eficiente; e (b) **seleção vantajosa** `r Citep(myBib, "einav")` -->
