--- a/eae0310-6-seguridade-social.Rmd
+++ b/eae0310-6-seguridade-social.Rmd
@@ -149,7 +149,7 @@ Mas note que o equilíbrio separador *ainda é ineficiente!* Os consumidores de 
 
 A **seleção adversa** ocorre pois indivíduos de menor risco decidem sair do mercado. Uma forma então "simples" de resolver o problema é obrigá-los a comprar o seguro
 
-Note que no último caso, se todos comprassem, a firma teria lucro zero e o mercado seria eficiente (nesse caso os consumidores de menor risco estariam subsidiando o seguro dos de maior risco)
+Note que no último caso na tabela, se todos comprassem, a firma teria lucro zero e o mercado seria eficiente (nesse caso os consumidores de menor risco estariam subsidiando o seguro dos de maior risco)
 
 ---
 class: middle
@@ -157,9 +157,9 @@ class: middle
 
 Podemos analisar o mercado de seguros com seleção adversa através de um gráfico de oferta e demanda com firmas perfeitamente competitivas competindo por preço em um único contrato de seguro `r Citep(myBib, "einav")`
 
-No "modelo de livro-texto", indivíduos são homogêneos em aversão ao risco, e portanto sua *disposição a pagar* pelo seguro é crescente no risco
+No caso mais simples, indivíduos são homogêneos em aversão ao risco, e portanto sua *disposição a pagar* pelo seguro é crescente no risco
 
-Assim, a diferença do modelo com seleção é que a curva de oferta e de demanda *não* são objetos independentes: o **tipo** de risco do agente determina tanto a sua demanda quanto o seu custo
+Assim, a diferença do modelo com seleção do tradicional é que a curva de oferta e de demanda *não* são objetos independentes: o **tipo** de risco do agente determina tanto a sua demanda quanto o seu custo
 
 ---
 class: middle
@@ -167,9 +167,7 @@ class: middle
 
 A ineficiência do mercado com seleção vem do fato da curva de MC estar **abaixo** da curva de AC: o consumidor marginal sempre tem um custo menor que os inframarginais
 
-Mas eles também têm uma disposição à pagar menor: produzir ao nível eficiente geraria prejuízo às operadoras &mdash; os indivíduos **de menor risco** são expulsos do mercado, ainda que valorem o seguro mais que seu custo individual
-
-Mesmo nesse modelo, a quantidade de falta de seguro e o peso morto podem variar muito
+Mas eles também têm uma disposição à pagar menor: produzir ao nível eficiente geraria prejuízo às operadoras &mdash; os indivíduos **de menor risco** são expulsos do mercado, ainda que valorem o seguro mais que seu custo individual: essa é a **seleção adversa**
 
 ---
 class: middle
@@ -208,7 +206,7 @@ Vimos que a razão principal para o **seguro público** é resolver o problema d
 
 Outra razão é que se eu não tenho seguro de carro e bato em alguém, posso não ter dinheiro para cobrir seus danos, gerando uma *externalidade financeira* (por isso existe o DPVAT)
 
-**Dilema do samaritano**: governos podem não conseguir *se comprometer crivelmente* a não intervir no estado ruim da natureza caso o agente não compre seguro
+Outro motivo é que governos podem não conseguir *se comprometer crivelmente* a não intervir no estado ruim da natureza caso o agente não compre seguro (**dilema do samaritano**)
 
 ---
 class: middle
@@ -253,7 +251,7 @@ Sem risco moral o seguro ótimo seria total. Na realidade, o **nível ótimo de 
 class: middle
 ## Seguro-desemprego ótimo com risco moral
 
-Consideremos o caso do seguro-desemprego: queremos suavizar o consumo de quem recebe choque negativo de emprego, mas se **taxa de reposição** for 100%, ninguém procuraria emprego
+Consideremos o caso do seguro-desemprego: queremos suavizar o consumo de quem recebe choque negativo de emprego, mas se **taxa de reposição** for 100%, ninguém procuraria emprego(*)
 
 Considere um indivíduo com probabilidade de estar desempregado $p$, que possui consumo $c_e = w - t$ quando empregado (onde $w$ é o salário e $t$ o imposto) e $c_u = b$ quando desempregado, com $b$ o benefício
 
@@ -284,9 +282,7 @@ O resultado iguala o benefício de suavização com o malefício do risco moral 
 class: middle
 ## Aposentadoria
 
-O sistema de previdência social cobra impostos sobre a folha de pagamentos da população ativa para transferir aos idosos
-
-A razão para essa transferência é que idosos, não podendo trabalhar, teriam nenhuma fonte de renda, e a poupança que fizeram no **ciclo de vida** pode acabar ("risco de viver demais")
+O sistema de previdência social cobra impostos sobre a folha de pagamentos da população ativa para transferir aos idosos &mdash; esses, não podendo trabalhar, teriam nenhuma fonte de renda, e a poupança que fizeram no **ciclo de vida** pode acabar ("risco de viver demais")
 
 Qual a razão para intervenção governamental nesse mercado? Em princípio, o mercado financeiro pode vender *anuidades*
 
@@ -317,31 +313,27 @@ class: middle
 knitr::include_graphics("figs/eae0310-6-6.png")
 ```
 
-Aumento da previdência social nos EUA está associado com significativa redução na pobreza dentre idosos `r Citep(myBib, "gruber")`
+Aumento da previdência social nos EUA está associado com significativa redução na pobreza dentre idosos `r Citep(myBib, "gruber")` &mdash; no Brasil, apenas 2,7% dos idosos estão abaixo da linha de pobreza, contra 11,5% na média nacional (e 20,3% entre 0-4 anos) (CPS/FGV)
 
 ---
 class: middle
 ## Reforma da previdência
 
-Toda década volta ao debate público o problema da sustentabilidade do setor previdenciário e reformas. A última foi em 2019
+Toda década volta ao debate público o problema da sustentabilidade do setor previdenciário e reformas. [A última foi em 2019](https://www.gov.br/inss/pt-br/assuntos/noticias/confira-as-principais-mudancas-da-nova-previdencia):
 
-A reforma entre outras coisas aumentou a idade mínima (65/62) e requer idade *+* tempo de contribuição (20/15)
-
-O pagamento agora é sobre a média dos salários (antes era dos 80% maiores): 60% + 2% por ano acima do mínimo
-
-A alíquota do INSS agora é progressiva: 7,5% para salário mínimo, até 22% (mas só até teto do INSS)
+1. A reforma entre outras coisas aumentou a idade mínima (65/62) e requer idade e tempo de contribuição (20/15)
+2. O pagamento agora é sobre a média dos salários (antes era dos 80% maiores): 60% + 2% por ano acima da idade mínima
+3. A alíquota do INSS agora é progressiva: 7,5% para salário mínimo, até 14% (mas só até teto do RGPS), e até 22% no RPPS
 
 ---
 class: middle
 ## Reforma da previdência
 
-Mas por que reformar? Muito se fala em "déficit previdenciário", mas do ponto de vista econômico isso é um tanto bobo
-
-Ao contrário da previdência privada, que é financiada por um fundo poupado pelo próprio trabalhador durante a vida, a previdência pública funciona *sem fundo constituído* (**regime de repartição**)
+Muito se fala em "déficit previdenciário", mas ao contrário da previdência privada, que é financiada por um fundo poupado pelo próprio trabalhador durante a vida, a previdência pública funciona *sem fundo constituído* (**regime de repartição**)
 
 Assim, não existe diferença *econômica* real entre a contribuição para o INSS e o financiamento do governo em geral (impostos)
 
-Problemas reais do sistema são três: progressividade, sustentabilidade e desincentivo ao trabalho
+Problemas reais do sistema são três: *progressividade*, *sustentabilidade* e *desincentivo ao trabalho*
 
 ---
 class: middle
@@ -360,7 +352,7 @@ class: middle
 knitr::include_graphics("figs/eae0310-6-7.png")
 ```
 
-**Sustentabilidade:** o Brasil transfere a idosos o mesmo que países com uma proporção muito maior de idosos na população `r Citep(myBib, "ipea2020politicas")`
+**Sustentabilidade:** o Brasil transfere a idosos o mesmo *em proporção do PIB* que países com uma proporção muito maior de idosos na população `r Citep(myBib, "ipea2020politicas")`
 
 
 ---
@@ -370,7 +362,26 @@ class: middle
 knitr::include_graphics("figs/eae0310-6-8.png")
 ```
 
-Transferências aos idosos se tornam insustentáveis com mudanças na pirâmide etária ([IBGE](https://educa.ibge.gov.br/professores/educa-atividades/20818-producao-textual-o-envelhecimento-da-populacao.html))
+Transferências aos idosos se tornam insustentáveis com mudanças na pirâmide etária, que aumentam proporção de recipientes em relação a pagantes ([IBGE](https://educa.ibge.gov.br/professores/educa-atividades/20818-producao-textual-o-envelhecimento-da-populacao.html))
+
+---
+class: middle
+
+```{r, echo=FALSE, fig.show="hold", out.width="50%"}
+knitr::include_graphics("figs/eae0310-6-17a.png")
+knitr::include_graphics("figs/eae0310-6-17b.png")
+```
+
+Na França, em (a), quase 70% dos idosos se aposentam exatamente na idade mínima, evidenciando que a aposentadoria distorce o comportamento (**desincentivo ao trabalho**). Da mesma forma, uma redução na idade mínima na Alemanha em 1973, painel (b), diminuiu a idade média de aposentadoria no país  `r Citep(myBib, "gruber")`
+
+---
+class: middle
+
+```{r, echo=FALSE, out.width = '50%'}
+knitr::include_graphics("figs/eae0310-6-16.png")
+```
+
+Nos EUA, antes da introdução de uma aposentadoria precoce (EEA) em 1962, a maioria dos trabalhadores se aposentava na idade integral (*bunching*) &mdash; mas essa massa foi se transferindo, ao longo das décadas de 70 e 80, para a idade mínima `r Citep(myBib, "gruber")`
 
 ---
 class: middle
@@ -379,7 +390,7 @@ class: middle
 knitr::include_graphics("figs/eae0310-6-9.png")
 ```
 
-**Desincentivo:** a previdência gera **taxação implícita** ao trabalho dos idosos  `r Citep(myBib, "gruber")`
+A previdência social gera **taxação implícita** ao trabalho dos idosos &mdash; na comparação entre países, países com uma taxação implícita maior têm menor proporção de idosos trabalhando `r Citep(myBib, "gruber")`
 
 ---
 class: middle
@@ -387,7 +398,15 @@ class: middle
 
 Recebe seguro desemprego no Brasil *trabalhadores formais* demitidos (involutariamente) sem justa causa que trabalharam 12 meses nos últimos 18 (1a solicitação), 9/12 (2a) ou nos 6 últimos meses (3a+)
 
-Valor é 80-50% da média dos últimos 3 meses de trabalho (**taxa de reposição**), com máximo de $1.909, e o trabalhador recebe por 3 (até 1 ano), 4 (até 2) ou 5 meses (mais de 2 anos de trabalho)
+Valor é 80-50% da média dos últimos 3 meses de trabalho (**taxa de reposição**), com máximo de $2.106 (2022), e o trabalhador recebe por 3 (até 1 ano), 4 (até 2) ou 5 meses (mais de 2 anos de trabalho)
+
+
+---
+class: middle
+
+```{r, echo=FALSE, out.width = '90%'}
+knitr::include_graphics("figs/eae0310-6-18.png")
+```
 
 A duração do seguro desemprego no Brasil é muito menor que a maioria dos países desenvolvidos, mas a taxa de reposição (até o teto) é comparável `r Citep(myBib, "gruber")`
 
@@ -397,9 +416,7 @@ class: middle
 
 Como discutimos, o nivel ótimo de seguro desemprego é aquele que iguala (na margem) a *suavização do consumo* (benefício) com o *risco moral* (malefício)
 
-Meyer (1989) comparou aumentos no seguro-desemprego em estados americanos e encontrou que um aumento de 10% no benefício aumenta a duração do desemprego em 8%
-
-Mas qual o efeito normativo disso? Duração maior pode ser eficiente se gerar um **match melhor de qualidade de emprego**
+Meyer (1989) comparou aumentos no seguro-desemprego em estados americanos e encontrou que um aumento de 10% no benefício aumenta a duração do desemprego em 8% &mdash; mas qual o efeito normativo disso? Duração maior pode ser eficiente se gerar um **match melhor de qualidade de emprego**
 
 Famílias também podem suavizar o consumo sem suavizar a utilidade, se tiverem que gerar renda de forma mais custosa (p.ex., bicos noturnos ou em atividades degradantes)
 
@@ -411,7 +428,7 @@ knitr::include_graphics("figs/eae0310-6-10.png")
 knitr::include_graphics("figs/eae0310-6-10b.png")
 ```
 
-Uma duração maior de seguro-desemprego faz as pessoas ficarem desempregadas por mais tempo (a), mas não parece ter efeito no salário 3 anos depois (b) `r Citep(myBib, "gerard2021informal")` 
+No Brasil, uma duração maior de seguro-desemprego faz as pessoas ficarem desempregadas por mais tempo, painel (a), mas não parece ter efeito no salário 3 anos depois, no painel (b) `r Citep(myBib, "gerard2021informal")` 
  
 ---
 class: middle
@@ -419,11 +436,9 @@ class: middle
 
 Os gastos com saúde no Brasil foram 9,2% do PIB (2017), sendo 3,9% gastos públicos (SUS) e 5,4% gastos privados (27% da população é coberta pelo setor privado)
 
-9% do PIB está na média da OCDE, mas os gastos públicos são bem menores que a média dos países desenvolvidos
+O nível de gastos como % do PIB está na média da OCDE, mas a participação do setor público é bem menor &mdash; mesmo nos EUA, $\approx 50\%$ dos gastos com saúde são públicos (Medicare e Medicaid): mais que no Brasil!
 
-Mesmo nos EUA, na verdade por volta da metade dos gastos com saúde são públicos (Medicare e Medicaid) &mdash; mais que no Brasil!
-
-O governo pode intervir obrigando (e subsidiando) a compra de seguro de saúde (Alemanha) ou oferecendo diretamente o serviço (NHS, SUS) ou pelo governo ou concessionários
+O governo pode intervir obrigando (e subsidiando) a compra de seguro de saúde (Alemanha) ou oferecendo diretamente o serviço (NHS, SUS), seja diretamente pelo governo ou por concessionários
 
 ---
 class: middle
@@ -432,17 +447,16 @@ class: middle
 knitr::include_graphics("figs/eae0310-6-15.png")
 ```
 
-Por volta de 20% dos hospitais que atendem o SUS são privados e 30% filantrópicos: apenas metade são públicos &mdash; entre esses, são principalmente municipais entre os hospitais menores, e estaduais e federais entre os maiores (e que fazem atendimentos de maior complexidade) `r Citep(myBib, "botega2020perfil")`
+Por volta de 20% dos hospitais que atendem o SUS são privados e 30% filantrópicos: apenas metade são públicos &mdash; entre esses, são principalmente municipais entre os hospitais menores (C1), e estaduais e federais entre os maiores (e que fazem atendimentos de maior complexidade), Classe 3 na figura `r Citep(myBib, "botega2020perfil")`
 
 ---
 class: middle
 
-```{r, echo=FALSE, out.width = '80%'}
+```{r, echo=FALSE, out.width = '60%'}
 knitr::include_graphics("figs/eae0310-6-11.png")
 ```
 
-Seguro de saúde gera *risco moral* da sobre-provisão de bens médicos(*) `r Citep(myBib, "gruber")`
-
+Se a consulta custa `$`100, o indivíduo consome Q1, mas se a *coparticipação* é de apenas `$`10, consome Q2 (**risco moral**) &mdash; mas o efeito normativo não é óbvio: se os custos refletem a disposição a pagar, então sem o seguro, pessoas pobres (baixa disposição) vão consumir poucos serviços médicos `r Citep(myBib, "gruber")`
 
 ---
 class:middle
