--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -860,3 +860,32 @@
   year={2019},
   publisher={SciELO Brasil}
 }
+
+@article{jones2022labor,
+Author = {Jones, Damon and Marinescu, Ioana},
+Title = {The Labor Market Impacts of Universal and Permanent Cash Transfers: Evidence from the Alaska Permanent Fund},
+Journal = {American Economic Journal: Economic Policy},
+Volume = {14},
+Number = {2},
+Year = {2022},
+Month = {May},
+Pages = {315-40},
+DOI = {10.1257/pol.20190299},
+URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
+
+@article{silveira2020impactos,
+  title={Impactos redistributivos das transfer{\^e}ncias p{\'u}blicas monet{\'a}rias e da tributa{\c{c}}{\~a}o direta: o que revela a POF 2017/18.},
+  author={Silveira, Fernando Gaiger and Passos, Luana and da Silva, Eduardo and Palomo, Theo Ribas},
+  year={2020}
+}
+
+@article{duflo2003grandmothers,
+  title={Grandmothers and granddaughters: old-age pensions and intrahousehold allocation in South Africa},
+  author={Duflo, Esther},
+  journal={The World Bank Economic Review},
+  volume={17},
+  number={1},
+  pages={1--25},
+  year={2003},
+  publisher={Oxford University Press}
+}
