--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -889,3 +889,11 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2003},
   publisher={Oxford University Press}
 }
+
+@incollection{silveira2019beneficios,
+  title={Benef{\'\i}cios fiscais do imposto sobre a renda da pessoa f{\'\i}sica e seus impactos redistributivos},
+  author={Silveira, Fernando Gaiger and Fernandes, Rodrigo Cardoso and Passos, Luana and others},
+  booktitle={Benef{\'\i}cios fiscais do imposto sobre a renda da pessoa f{\'\i}sica e seus impactos redistributivos},
+  pages={22--il},
+  year={2019}
+}
